unpackaged/main/default/objects/Customer_Event__c/Customer_Event__c.object-meta.xml
<CustomObject>
    <label>Customer Event</label>
    <nameField>
        <displayFormat>CE-{MM}{DD}{YYYY}-{00000}</displayFormat>
        <label>Customer Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>