unpackaged/main/default/objects/Customer_Event__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Events</relationshipLabel>
    <relationshipName>Customer_Events</relationshipName>
    <type>Lookup</type>
</CustomField>