unpackaged/main/default/objects/Customer_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DLP Visit</fullName>
            </value>
            <value>
                <fullName>Credit Application Signed</fullName>
            </value>
            <value>
                <fullName>Bank Statements Uploaded</fullName>
            </value>
            <value>
                <fullName>Drivers License Uploaded</fullName>
            </value>
            <value>
                <fullName>Voided Check Uploaded</fullName>
            </value>
            <value>
                <fullName>Plaid - Process Started</fullName>
            </value>
            <value>
                <fullName>Plaid - Upload Error</fullName>
            </value>
            <value>
                <fullName>Plaid - Upload Success</fullName>
            </value>
            <value>
                <fullName>Success Generating Compliance Document</fullName>
            </value>
            <value>
                <fullName>Error Generating Compliance Document</fullName>
            </value>
            <value>
                <fullName>Customer Signed Compliance Document</fullName>
            </value>
            <value>
                <fullName>Success Generating Funding Documents</fullName>
            </value>
            <value>
                <fullName>Error Generating Funding Documents</fullName>
            </value>
            <value>
                <fullName>Customer Signed Funding Documents</fullName>
            </value>
            <value>
                <fullName>ID - Verification Started</fullName>
            </value>
            <value>
                <fullName>ID - Verification Completed</fullName>
            </value>
            <value>
                <fullName>ID - Verification Error</fullName>
            </value>
            <value>
                <fullName>Success Generating Credit Application</fullName>
            </value>
            <value>
                <fullName>Error Generating Credit Application</fullName>
            </value>
            <value>
                <fullName>DLP Visit - Funding Options</fullName>
            </value>
            <value>
                <fullName>Consent Submitted</fullName>
            </value>
            <value>
                <fullName>SMS Opt In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>